--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="botonesSoporte">
-                        <button class="botResp" id="btnRespRest">RESPALDO Y RESTAURACIÓN</button>
+                        <!-- <button class="botResp" id="btnRespRest">RESPALDO Y RESTAURACIÓN</button> -->
                         <button class="botCentro" id="btnCentro">CENTRO DE APRENDIZAJES</button>
                     </div>
                 </div>
@@ -235,7 +235,6 @@
     <script src="{% static 'dashboard/js/clientes/asistenciaTecnica.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/historial.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
-    <!-- <script src="{% static 'tickets/request.js' %}"></script> -->
 </body>
 
 </html>
